# sysinfo

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/hmxlabs/sysinfo/: sysinfo.py
