[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmxlabs.sysinfo"
version = "0.0.1"
authors = [
  { name="HMx Labs", email="comms@hmxlabs.uk" }
]
description = "Package to get basic system information including CPU count, HT/SMT status, RAM and disk size"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers"
]

[project.urls]
"Homepage" = "https://github.com/hmxlabs/sysinfo/"
"HMxLabs" = "http://hmxlabs.uk"